Fixed a bug where error messages for fields that were invalid by default would be visible on page load.

--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/App.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/App.css
@@ -151,6 +151,10 @@ option:not(:first-child) {
     padding: 0;
 }
 
+.FormField ~ p, .FormDropDown ~ p, textarea ~ p, input[type=radio] ~ p {
+    display: none;
+}
+
 .FormField:user-invalid, .FormDropDown:user-invalid, textarea:user-invalid, input[type=radio]:user-invalid {
     background-color: var(--secondary-pink);
 }
